2005-10-02  Stefan Jahn  <stefan@lkcc.org>

	* check_netlist.cpp: Property range specification now also
	including interval boundary conditions.

2005-09-25  Stefan Jahn  <stefan@lkcc.org>

	* transient.cpp, trsolver.cpp: Fixed forward/backward Euler
	method remarks.

2005-07-18  Stefan Jahn  <stefan@lkcc.org>

	* qucsdefs.h (qucs_definition_available): Allowing negative
	length of ideal transmission line.

2005-07-03  Stefan Jahn  <stefan@lkcc.org>

	* check_netlist.cpp: Fixed a bug occurring when S-parameter
	file container is used in subcircuits.

2005-06-26  Stefan Jahn  <stefan@lkcc.org>

	* tvector.cpp: Added setData() function in order to assign
	external data (sub)vector to a tvector.

2005-06-19  Stefan Jahn  <stefan@lkcc.org>

	* tridiag.h (class tridiag): New class implementing solution of
	tridiagonal (symmetric/non-symmetric and cyclic/non-cyclic)
	equation systems.  The cyclic matrices are going to be used for
	periodic cubic splines.

2005-06-06  Stefan Jahn  <stefan@lkcc.org>

	* vector.cpp: New unwrap() function implemented.

	* evaluate.cpp: Added unwrap(), rad2deg() and deg2rad()
	functions.

2005-05-21  Stefan Jahn  <stefan@lkcc.org>

	* spline.h (class spline): Cubic spline class.  Generates
	spline coeeficients from data vectors.  Very useful for
	interpolations.

	* poly.h (class poly): New polynom class defined by function
	value and the derivatives.

	* evaluate.cpp: Added interpolation functions.

2005-05-16  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Fixed circle formulas (off by one index
	errors).

	* nasolver.cpp: Fixed left-over bug in AC noise matrix
	creation (indexing, off by one).

2005-05-09  Stefan Jahn  <stefan@lkcc.org>

	* scan_netlist.l: Removed 'unistd' option from all scanners
	files (scan_*.l).

2005-05-02  Stefan Jahn  <stefan@lkcc.org>

	* tvector.cpp: Improved norm() calculation.

	* qucsdefs.h (qucs_definition_available): Fixed number of
	ports for coplanar open and short.
