@@ -1,3 +1,8 @@
+2005-10-04  Stefan Jahn  <stefan@lkcc.org>
+
+	* nasolver.cpp: Fixed noise correlation matrix entry
+	collector (buggy due to new correlation sources).
+
 2005-10-02  Stefan Jahn  <stefan@lkcc.org>
 
 	* check_netlist.cpp: Property range specification now also
